# MKAutoRipper

./: README.md
docs/: build_pi_terminal.md  cd_stats.md  ripper_hardware.fzz
hardware/: ads_config.md  air_hardware.md  model_notes.md  nema_motors.md  notes.md  pi7touchscreen.md
models/: 35mm spacer.stl  Fan__60mm.STL  Pi_Cam_3_Mount_base.stl  readme.md  two_post_media_picker.stl  two_post_media_picker_holes.stl  vert_stop_mounts_90.stl
src/: Cargo.toml  MM_HTPC_Media_File_Mover.py  bltouch_test.ino  gpio_pin_state_checker.py  main_ripper_pi.py  pi_terminal.db  stepper_test.py  test_drive_numbers.py  touch_test.ino
src/arduino/: common_hardware_arduino_led.c  common_hardware_arduino_motor.c  common_hardware_arduino_servo.c  common_hardware_arduino_stepper.c
src/beaglebone/: common_hardware_bbb_bbio_pwm.py  common_hardware_bbb_pir.py  common_hardware_bbb_serial.py
src/docker/: docker-compose.yml
src/docker/ripper/: Cargo.toml  Dockerfile  abcde.conf
src/docker/ripper/src/: drive_commands.rs  main.rs  rabbit.rs
src/gpio_status/: Cargo.toml
src/pi_pin_tester/: Cargo.toml
src/pi_pin_tester/src/: gpio.rs  main.rs
src/pi_terminal/: Cargo.toml
src/pi_terminal/src/: byte_size.rs  camera.rs  choice.rs  database.rs  gpio.rs  hardware_layout.rs  main.rs  rabbitmq.rs  servo.rs  stepper.rs
src/raspberrypi/: common_hardware_sensehat.py
src/ripper_client/: Cargo.toml
src/ripper_client/src/: drive_commands.rs  main.rs
