[package]
name = "gpio_status"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
lazy_static = "1.5.0"
rppal = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
syact = "0.13.7"
sys-info = "0.9.1"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
