[package]
name = "pi_terminal"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
amqprs = "2.1.0"
bytesize = { version = "1.3.2", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
fltk = { version = "1.5.4", features = ["fltk-bundled"] }
fltk-table = "0.3.4"
fltk-theme = "0.7.5"
lazy_static = "1.5.0"
rppal = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlite = "0.36.2"
syact = "0.13.7"
sys-info = "0.9.1"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.14.0", features = ["serde", "v7"] }

[dev-dependencies]
tokio-test = "*"
