[package]
name = "pi_terminal"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
amqprs = "2.1.1"
bytesize = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
fltk = { version = "1.5.7", features = ["fltk-bundled"] }
fltk-table = "0.3.4"
fltk-theme = "0.7.5"
lazy_static = "1.5.0"
rppal = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite = "0.37.0"
syact = "0.13.7"
sys-info = "0.9.1"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }

[dev-dependencies]
tokio-test = "*"
