[package]
name = "pi_terminal"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
ads1x1x = "0.3.0"
amqprs = "2.1.3"
bytesize = { version = "2.1.0", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
fltk = { version = "1.5.22", features = ["fltk-bundled"] }
fltk-table = "0.3.5"
fltk-theme = "0.7.9"
lazy_static = "1.5.0"
linux-embedded-hal = "0.4.1"
nb = "1.1.0"
rppal = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite = "0.37.0"
syact = "0.13.7"
sys-info = "0.9.1"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }

[dev-dependencies]
tokio-test = "*"
