[package]
name = "mkripper"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
amqprs = "2.0.0"
serde_json = "1.0.128"
sysinfo = "0.31.4"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
