[package]
name = "mkripper"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
amqprs = "2.1.3"
#blake3 = "1.8.2"
discid = "0.7.0"
serde_json = "1.0.149"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
